Got widget feedback loop to work, added canvasSize / cardSize distinction for each layer

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -12,19 +12,19 @@
         <script>require('application');</script>
     </head>
     <body>
-        <h1>Blade Runner ID Card Generator</h1>
-        <p><i>For all your Blade Runner ID Card generating needs</i></p>
         <div class="full">
+            <h1>BRID</h1>
+
             <div class="mixing-deck">
-                <canvas class="card-canvas"/>
+                <canvas class="card-canvas"></canvas>
                 <div class="card-widgets">
                     <form class="card-widgets-root">
-
+                        <!-- widgets generated placed here --> 
                     </form>
                 </div>
-            </div>
-            
+            </div>            
         </div>
         <img src="/example.jpg"/>
+        <p>Thanks to http://www.steinschneider.com/bladerunner/BRFont.htm for the "Spinner" font</p>
     </body>
 </html> 
