--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>BRID</title>
         <link rel="stylesheet" type="text/css" href="/app.css" />
-        
+        <link ref="t"
         <script src="/js/vendor.js"></script>
         <script src="/js/app.js"></script>
         <script>require('application');</script>
