First cut of the name field - TODO font selector

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>BRID</title>
+        <link href="https://fonts.googleapis.com/css?family=Domine|Roboto+Slab|Sumana|Vidaloka" rel="stylesheet"> 
         <link rel="stylesheet" type="text/css" href="/app.css" />
         
         <script src="/js/vendor.js"></script>
