Add a wrapper around the canvas so the actual size of the container can always be found - add some warnings if each element isn't found - also turn off debug logging in headline layer

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -17,7 +17,9 @@
             <h1>BRID</h1>
 
             <div class="mixing-deck">
-                <canvas class="card-canvas"></canvas>
+                <div class="card-canvas-container">
+                    <canvas class="card-canvas"></canvas>
+                </div>
                 <div class="card-widgets">
                     <form class="card-widgets-root">
                         <!-- widgets generated placed here --> 
